--- a/Functions/Functions.csproj
+++ b/Functions/Functions.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TaskRosenbrock.cs" />
     <Compile Include="MyTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaskRastrigin.cs" />
