--- a/ParticleGui/ParticleGui.csproj
+++ b/ParticleGui/ParticleGui.csproj
@@ -46,6 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TaskGuiRosenbrock.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
